# GPU-Kernel-Lab

./: .gitignore  CMakeLists.txt  README.md  environment.yml  requirements.txt
python/: README.md  compare_gemm.py  plot_performance.py
scripts/: run_benchmarks.py
src/: CMakeLists.txt  conv2d.cu  gemm.cu  gemm_fp16.cu  gemm_wmma.cu  reduction.cu  softmax.cu  vec_add.cu
tests/: CMakeLists.txt  test_conv2d.cu  test_gemm.cu  test_gemm_fp16.cu  test_gemm_wmma.cu  test_reduction.cu  test_softmax.cu  test_vec_add.cu
